2000-03-02  Akim Demaille  <akim@epita.fr>

	* acspecific.m4: Move some macros to a better place.

2000-03-02  Akim Demaille  <akim@epita.fr>

	Internal macros are named `_AC_'.

	* acgeneral.m4 (AC_CANONICAL_TARGET, AC_CANONICAL_BUILD,
	AC_CANONICAL_THING, AC_CHECK_TOOL_PREFIX, AC_CONFIG_UNIQUE):
	Prepend `_' to their names.
	* acspecific.m4 (AC_CHECK_HEADER_DIRENT, AC_CHECK_HEADERS_DIRENT,
	AC_PATH_X_XMKMF, AC_PATH_X_DIRECT): Prepend `_' to their names.
	* doc/autoconf.texi (Macro Names): Adjusted.

2000-03-02  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.

2000-03-01  Akim Demaille  <akim@epita.fr>

	The empty regexp cannot be portably used in egrep's alternation.
	For instance with Digital Unix v5.0:
	   > echo "foo"  | egrep -e "^(|foo|bar)$"
	   > echo "|foo" | egrep -e "^(|foo|bar)$"
	   |foo
	   > echo "|bar" | egrep -e "^(|foo|bar)$"
	   > echo "bar"  | egrep -e "^(|foo|bar)$"
	   bar
	Reported by Nicolas Joly.

	* src/actest.m4 (AC_ENV_SAVE): s/(|EXTRA_|PRE_)/(EXTRA_|PRE_)?/.

2000-03-01  Akim Demaille  <akim@epita.fr>

	* acspecific.m4: Removed a few addresses, the map is...
	* THANKS: here.

2000-03-01  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* acspecific.m4 (AC_PATH_XTRA): On LynxOS 3.0.1/i386,
	gethostbyname(), getservbyname(), and inet_addr() are in -lbsd.

2000-03-01  Akim Demaille  <akim@epita.fr>

	* tests/actest.m4 (AC_ENV_SAVE): Use multiple -e instead of
	multiple egrep.

2000-03-01  Akim Demaille  <akim@epita.fr>

	* config.guess: Updated from master repository.
	* config.sub: Likewise.

2000-03-01  Akim Demaille  <akim@epita.fr>

	Test suite: instead of using a full list of the AC macros and an
	AT macro with selects which are the AC macros to test, just
	produce the list of the AC macros we want to test.

	* tests/atspecific.m4 (TEST_MACRO): Removed.
	* tests/Makefile.am (EGREP_EXCLUDE): New variable, performing the
	selection TEST_MACRO used to do.